--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ToDoManager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todo-manager-db
+spring.datasource.username=root
+spring.datasource.password=raph
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+logging.level.org.hibernate.orm.connections.pooling=OFF
